--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
